# camcv

./: .gitignore  CMakeLists.txt  README.md  clean.sh  run.sh
include/: device.h  logger.h  motion.h  options.h  optionsparser.h  verbosity.h
include/camcv/: config.h
include/tools/: timestamp.h
src/: device.cpp  logger.cpp  main.cpp  motion.cpp  optionsparser.cpp  timestamp.cpp
